bug fix no  doubles

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 tr {
     width: 399px;
 }
