--- a/style.css
+++ b/style.css
@@ -52,3 +52,19 @@ table{
 .cross{
     z-index: 5;
 }
+
+.winner-screen{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 4px;
+    box-shadow: 1px 1px 8px 0px #8080809c;
+}
+
+.btn{
+    margin-bottom: 15px;
+}
+
+.d-none{
+    display: none;
+}
