--- a/style.css
+++ b/style.css
@@ -2,8 +2,31 @@ body{
     height: 100vh;
     margin: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.players{
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 50px;
+    width: 410px;
+}
+
+.player{
+    align-items: center;
+    display: flex;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.opacity{
+    opacity: 0.3;
+}
+
+.player span{
+    margin-right: 12px;
 }
 
 tr {
@@ -49,22 +72,47 @@ table{
     width: 100px;
 }
 
-.cross{
-    z-index: 5;
-}
-
-.winner-screen{
+.end-screen{
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 4px;
     box-shadow: 1px 1px 8px 0px #8080809c;
+    z-index: 2;
 }
 
 .btn{
     margin-bottom: 15px;
+    cursor: pointer;
 }
 
 .d-none{
     display: none;
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+}
+
+.horizontal-line{
+    height: 10px;
+    width: 300px;
+    background-color: #6c6c6ce0;
+    position: absolute;
+    transform: scaleX(0.0);
+    transition: transform 225ms ease-in-out;
+}
+
+.make-vertical{
+    transform: rotate(90deg) scaleX(0.0);
+}
+
+@media(max-width: 450px){
+    td{
+        width: 100px;
+        height: 100px;
+    }
 }
